[shenker/cloning,cloning] strand=1 now means sense, -1 means antisense.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210803 Insulation+FISH primers.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210803 Insulation+FISH primers.ipynb
@@ -405,10 +405,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Test"
+    "target = plib_maps[\"pLIB122\"]"
    ]
   },
   {
@@ -417,60 +419,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = plib_maps[\"pLIB122\"]\n",
-    "target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "primer = olib_oligos[\"oLIB177\"][\"Sequence\"]\n",
-    "primer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sites = sequence.find_primer_binding_site(target, primer)\n",
-    "sites"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sites = sequence.find_primer_binding_site(target.reindex(-20), primer)\n",
-    "sites"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sites = sequence.find_primer_binding_site(target.reindex(13), primer)\n",
-    "sites"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sites = sequence.find_primer_binding_site(\n",
-    "    target.reindex(-20), sequence.reverse_complement(primer)\n",
+    "res = sequence.find_primer_binding_site(\n",
+    "    target,\n",
+    "    sequence.reverse_complement(olib_oligos[\"oLIB180\"][\"Sequence\"]),\n",
+    "    return_sequences=True,\n",
     ")\n",
-    "sites"
+    "res"
    ]
   },
   {
@@ -479,10 +433,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sites = sequence.find_primer_binding_site(\n",
-    "    target.reindex(-20), sequence.reverse_complement(primer), require_3prime_clamp=False\n",
+    "res = sequence.find_primer_binding_site(\n",
+    "    target, olib_oligos[\"oLIB177\"][\"Sequence\"], return_sequences=True\n",
     ")\n",
-    "sites"
+    "res"
    ]
   },
   {
@@ -491,19 +445,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sites = sequence.find_primer_binding_site(\n",
-    "    target.reindex(-20).reverse_complement(),\n",
-    "    sequence.reverse_complement(primer),\n",
-    "    require_3prime_clamp=False,\n",
-    ")\n",
-    "sites"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test"
+    "score = res[0][2]\n",
+    "primer_overlap = res[0][-1]"
    ]
   },
   {
@@ -512,12 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sites = sequence.find_primer_binding_site(\n",
-    "    target.reindex(-20).reverse_complement(),\n",
-    "    \"Xggctcagtcgaaagactgggcc\",\n",
-    "    require_3prime_clamp=False,\n",
-    ")\n",
-    "sites"
+    "primer_overlap[-score:]"
    ]
   },
   {
@@ -526,29 +464,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sites = sequence.find_primer_binding_site(\n",
-    "    target.reindex(-20).reverse_complement(),\n",
-    "    sequence.reverse_complement(\"XXXcctttaattaaggagttttg\"),\n",
-    "    require_3prime_clamp=False,\n",
-    ")\n",
-    "sites"
+    "workflow.replace_primer_tail(target, olib_oligos[\"oLIB177\"][\"Sequence\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.reverse_complement(primer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
