[shenker/cloning,cloning] Last commit correctly described desired behavior but implemented the opposite

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210803 Insulation+FISH primers.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210803 Insulation+FISH primers.ipynb
@@ -464,7 +464,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "olib_oligos[\"oLIB177\"][\"Sequence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "workflow.replace_primer_tail(target, olib_oligos[\"oLIB177\"][\"Sequence\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.replace_primer_tail(target, olib_oligos[\"oLIB177\"][\"Sequence\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_primer = olib_oligos[\"oLIB177\"][\"Sequence\"]\n",
+    "new_primer = workflow.replace_primer_tail(target, old_primer)\n",
+    "print(old_primer)\n",
+    "print(new_primer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_primer = olib_oligos[\"oLIB211\"][\"Sequence\"]\n",
+    "new_primer = workflow.replace_primer_tail(target, old_primer, \"AAAA\")\n",
+    "print(old_primer)\n",
+    "print(new_primer)"
    ]
   },
   {
