WIP primer design workflow. enzyme functions now work with a CutSite NamedTuple. Fixed threading import. Added stub for amplicon_location.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210804 Insulation+FISH primers.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210804 Insulation+FISH primers.ipynb
@@ -51,7 +51,8 @@
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
-    "import paulssonlab.cloning.viennarna as viennarna"
+    "import paulssonlab.cloning.viennarna as viennarna\n",
+    "import paulssonlab.cloning.thermodynamics as thermodynamics"
    ]
   },
   {
@@ -207,6 +208,24 @@
     "    dna_conc=(primer_conc / 6) * 7,  # primer is assumed 6x template\n",
     "    mv_conc=200,  # (60+20),\n",
     "    dv_conc=2,\n",
+    "    tm_method=\"santalucia\",\n",
+    "    salt_corrections_method=\"owczarzy\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primer_conc = 500\n",
+    "\n",
+    "primer3.calcTm(\n",
+    "    seq,\n",
+    "    dna_conc=(primer_conc / 6) * 7,  # primer is assumed 6x template\n",
+    "    mv_conc=200,  # (60+20),\n",
+    "    dv_conc=0,\n",
     "    tm_method=\"santalucia\",\n",
     "    salt_corrections_method=\"owczarzy\",\n",
     ")"
@@ -383,106 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uns1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olib_oligos[\"oLIB179\"][\"\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olib_oligos[\"oLIB177\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "target = plib_maps[\"pLIB122\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = sequence.find_primer_binding_site(\n",
-    "    target,\n",
-    "    sequence.reverse_complement(olib_oligos[\"oLIB180\"][\"Sequence\"]),\n",
-    "    return_sequences=True,\n",
-    ")\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = sequence.find_primer_binding_site(\n",
-    "    target, olib_oligos[\"oLIB177\"][\"Sequence\"], return_sequences=True\n",
-    ")\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "score = res[0][2]\n",
-    "primer_overlap = res[0][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "primer_overlap[-score:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olib_oligos[\"oLIB177\"][\"Sequence\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workflow.replace_primer_tail(target, olib_oligos[\"oLIB177\"][\"Sequence\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workflow.replace_primer_tail(target, olib_oligos[\"oLIB177\"][\"Sequence\"])"
    ]
   },
   {
@@ -503,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "old_primer = olib_oligos[\"oLIB211\"][\"Sequence\"]\n",
+    "old_primer = olib_oligos[\"oLIB177\"][\"Sequence\"]\n",
     "new_primer = workflow.replace_primer_tail(target, old_primer, \"AAAA\")\n",
     "print(old_primer)\n",
     "print(new_primer)"
@@ -522,7 +442,181 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"caaaaaacccctcaagac\" + uns9"
+    "upstream = \"tctcctacataatacgactcactatagggacgaacgttagcagcactat\"\n",
+    "downstream = \"aaccccttggggcctctaaacgggtcttgaggggttttttgggaatgaga\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"caaaaaacccctcaagac\" + uns9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "enumerate_primers(\n",
+    "    sequence.reverse_complement(downstream).lower(),\n",
+    "    tail=uns9,\n",
+    "    min_mfe=-20,\n",
+    "    monotonic_mfe=False,\n",
+    "    anchor_3prime=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enumerate_primer_pairs(upstream, downstream)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Primer3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import primer3plus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "design = primer3plus.Design()\n",
+    "design.settings.template(str(sequence.get_seq(target)))\n",
+    "# design.settings.as_cloning_task()\n",
+    "design.settings.primer_num_return(1)\n",
+    "results, explain = design.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme.re_search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_seq = \"gcttcacgtctcggtctcaaggtctttaaaaagaaacctccgcattgcggaggtttcgccttttgatactctgtctgaagtaattcttgccgcagtgaaaaatggcgcccatcggcgccatttttttatgcttccattagaaagcaaaaagcctgctagaaagcaggcttttttgaatttggctcctctgacgctttgagaccggagacgtgctaa\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzyme._re_search(test_seq, Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_seq[12:197]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find BsaI sites\n",
+    "# hhh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import primer3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primer3.designPrimers(\n",
+    "    {\n",
+    "        \"SEQUENCE_TEMPLATE\": str(sequence.get_seq(target)),\n",
+    "        \"SEQUENCE_INCLUDED_REGION\": [36, 342],\n",
+    "    },\n",
+    "    {\n",
+    "        #         'PRIMER_PICK_INTERNAL_OLIGO': 1,\n",
+    "        #         'PRIMER_INTERNAL_MAX_SELF_END': 8,\n",
+    "        \"PRIMER_OPT_SIZE\": 20,\n",
+    "        \"PRIMER_MIN_SIZE\": 18,\n",
+    "        \"PRIMER_MAX_SIZE\": 25,\n",
+    "        \"PRIMER_OPT_TM\": 60.0,\n",
+    "        \"PRIMER_MIN_TM\": 57.0,\n",
+    "        \"PRIMER_MAX_TM\": 63.0,\n",
+    "        \"PRIMER_MIN_GC\": 20.0,\n",
+    "        \"PRIMER_MAX_GC\": 80.0,\n",
+    "        #         'PRIMER_MAX_POLY_X': 100,\n",
+    "        #         'PRIMER_INTERNAL_MAX_POLY_X': 100,\n",
+    "        \"PRIMER_SALT_MONOVALENT\": 50.0,\n",
+    "        \"PRIMER_DNA_CONC\": 50.0,\n",
+    "        #         'PRIMER_MAX_NS_ACCEPTED': 0,\n",
+    "        #         'PRIMER_MAX_SELF_ANY': 12,\n",
+    "        #         'PRIMER_MAX_SELF_END': 8,\n",
+    "        #         'PRIMER_PAIR_MAX_COMPL_ANY': 12,\n",
+    "        #         'PRIMER_PAIR_MAX_COMPL_END': 8,\n",
+    "        #         'PRIMER_PRODUCT_SIZE_RANGE': [[75,100],[100,125],[125,150],\n",
+    "        #                                       [150,175],[175,200],[200,225]],\n",
+    "    },\n",
+    ")"
    ]
   },
   {
