[cloning,shenker/cloning] WIP Bsub sigma factor primers.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210809 Bacillus sigma primers.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210809 Bacillus sigma primers.ipynb
@@ -52,7 +52,8 @@
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
     "import paulssonlab.cloning.viennarna as viennarna\n",
-    "import paulssonlab.cloning.thermodynamics as thermodynamics"
+    "import paulssonlab.cloning.thermodynamics as thermodynamics\n",
+    "import paulssonlab.cloning.primers as primers"
    ]
   },
   {
@@ -245,13 +246,13 @@
     ")\n",
     "\n",
     "bervoets_primers_for_sigma = {\n",
-    "    \"B\": (\"IB0250\", \"IB0251\"),\n",
-    "    \"F\": (\"IB0252\", \"IB0253\"),\n",
-    "    \"G\": (\"IB0254\", \"IB0255\"),\n",
-    "    \"H\": (\"IB0256\", \"IB0257\"),\n",
-    "    \"M\": (\"IB0238\", \"IB0249\"),\n",
-    "    \"W\": (\"IB0258\", \"IB0259\"),\n",
-    "    \"X\": (\"IB0260\", \"IB0261\"),\n",
+    "    \"sigB\": (\"IB0250\", \"IB0251\"),\n",
+    "    \"sigF\": (\"IB0252\", \"IB0253\"),\n",
+    "    \"sigG\": (\"IB0254\", \"IB0255\"),\n",
+    "    \"sigH\": (\"IB0256\", \"IB0257\"),\n",
+    "    \"sigM\": (\"IB0238\", \"IB0249\"),\n",
+    "    \"sigW\": (\"IB0258\", \"IB0259\"),\n",
+    "    \"sigX\": (\"IB0260\", \"IB0261\"),\n",
     "}"
    ]
   },
@@ -332,15 +333,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[bervoets_primers.loc[name, \"Sequence\"] for name in bervoets_primers_for_sigma[\"B\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "olt = reg[(\"oLT\", \"oligos\")]\n",
     "lib_parts = reg[(\"LIB\", \"parts\")]\n",
     "part_types = reg[(\"LIB\", \"parts\", \"Part types\")]"
@@ -381,29 +373,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# WIP commit\n",
-    "# rename target to template?\n",
-    "# evaluate_primer should take template or binding? (see replace_primer_tail)\n",
-    "# evaluate bervoets primers, compare with primer3\n",
-    "# check that my flanks are good (e.g., simulate pcr)\n",
-    "\n",
-    "# sigma/antisigma primers\n",
-    "# -> save (evaluate_primer -> description)\n",
-    "# primer3 tm params\n",
-    "# primer3 tm goal\n",
-    "# promoters\n",
-    "# -> save\n",
-    "# bsubcyc?\n",
-    "\n",
-    "# find what params primer3plus is passing to BoulderIO\n",
-    "# try reproducing using BoulderIO directly\n",
-    "# try to avoid product_size issue with BoulderIO\n",
-    "# use same fix for primer3plus?"
+    "## Bervoets primers"
    ]
   },
   {
@@ -412,10 +385,132 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def design_primers(target, flanks):\n",
-    "    target_seq = str(sequence.get_seq(target)).lower()\n",
+    "[bervoets_primers.loc[name, \"Sequence\"] for name in bervoets_primers_for_sigma[\"sigB\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Primer/PrimerPair class, memoize thermo params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: order Bervoets primers in forward/reverse order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = datetime.now().strftime(\"%-m/%-d/%Y\")\n",
+    "\n",
+    "base_row = {\n",
+    "    \"Author\": \"Jacob Quinn Shenker\",\n",
+    "    \"Vendor\": \"IDT\",\n",
+    "    \"Type\": \"Primer\",\n",
+    "    \"Date\": date,\n",
+    "    \"Order date\": date,\n",
+    "}\n",
+    "\n",
+    "rows = []\n",
+    "\n",
+    "name = \"sigB\"\n",
+    "template_seq = sigb\n",
+    "\n",
+    "full_flanks = workflow.concatenate_flanks(\n",
+    "    overhangs_for(part_types[\"CDS_CD\"]), storage_flanks\n",
+    ")\n",
+    "trimmed_flanks = workflow.smoosh_and_trim_flanks(template_seq, full_flanks)\n",
+    "\n",
+    "for bervoets_name, flank, orientation in zip(\n",
+    "    bervoets_primers_for_sigma[name], trimmed_flanks, (\"r\", \"f\")\n",
+    "):\n",
+    "    primer_seq_orig = bervoets_primers.loc[bervoets_name, \"Sequence\"]\n",
+    "    primer_seq = primers.replace_primer_tail(sigb, primer_seq_orig, flank)\n",
+    "    primer_name = f\"Bsub_{name}_{orientation}\"\n",
+    "    description = f\"Primers to amplify {name} from B. subtilis. Primer binding site from {bervoets_name} (Bervoets 2018). Flanks for BsmBI golden gate into pLIB112.\"\n",
+    "    row = {\n",
+    "        \"Name\": primer_name,\n",
+    "        \"Sequence\": str(primer_seq).upper(),\n",
+    "        \"Description\": description,\n",
+    "        **base_row,\n",
+    "    }\n",
+    "    rows.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product = sequence.pcr(sigb, *[r[\"Sequence\"] for r in rows])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product.seq_lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for row in rows:\n",
+    "    olt[olt.next_id()] = row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olt.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## De novo primers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def design_primers(template, flanks):\n",
+    "    template_seq = str(sequence.get_seq(template)).lower()\n",
     "    full_flanks = workflow.concatenate_flanks(*flanks)\n",
-    "    trimmed_flanks = workflow.smoosh_and_trim_flanks(target_seq, full_flanks)\n",
+    "    trimmed_flanks = workflow.smoosh_and_trim_flanks(template_seq, full_flanks)\n",
     "    design = primer3plus.Design()\n",
     "    design.settings.template(target_seq)\n",
     "    design.settings.as_cloning_task()\n",
@@ -548,85 +643,6 @@
    "outputs": [],
    "source": [
     "_.content"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Old"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olib = reg[(\"oLIB\", \"oligos\")]\n",
-    "plib_maps = reg[(\"pLIB\", \"maps\")]\n",
-    "primers = {f\"oLIB{num}\": olib[f\"oLIB{num}\"][\"Sequence\"] for num in range(179, 183)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olt = reg[(\"oLT\", \"oligos\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "date = datetime.now().strftime(\"%-m/%-d/%Y\")\n",
-    "\n",
-    "rows = []\n",
-    "\n",
-    "for i, idx in enumerate(idxs):\n",
-    "    row = {\n",
-    "        **dissoc(old_row, \"ID\"),\n",
-    "        \"Sequence\": seq[idx].upper(),\n",
-    "        \"Name\": \"{}_v2_split{}\".format(old_row[\"Name\"], i + 1),\n",
-    "        \"Description\": \"Split section {}-of-{} of oLT74 (20bp overlap).\\n{}\".format(\n",
-    "            i + 1, len(idxs), old_row[\"Description\"]\n",
-    "        ),\n",
-    "        \"Date\": date,\n",
-    "        \"Order date\": date,\n",
-    "    }\n",
-    "    rows.append(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in rows:\n",
-    "    olt[olt.next_id()] = row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olt.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rows"
    ]
   }
  ],
