[cloning] Primer seems to work although not tested well, WIP PrimerPair.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210827 FP parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210827 FP parts.ipynb
@@ -451,7 +451,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# USE CASES:\n",
@@ -548,6 +550,84 @@
    "outputs": [],
    "source": [
     "p1 = primers.Primer(primer3=primer3test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = primers.PrimerPair(\"aaaagggg\", \"ccccaaaa\")\n",
+    "b = primers.PrimerPair(\"aaaagggg\", \"ccccaaaa\", template=\"gggg\")\n",
+    "c = primers.PrimerPair(\n",
+    "    Primer(\"gggg\" + (\"a\" * 10), binding_length=10),\n",
+    "    Primer(\"gggg\" + (\"a\" * 10), binding_length=10),\n",
+    ")\n",
+    "d = primers.PrimerPair(primer3=primer3pairtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = Primer(\"gggg\" + (\"a\" * 10), binding_length=10)\n",
+    "b = Primer(\"gggg\" + (\"a\" * 10), overhang_length=4)\n",
+    "c = Primer(\"gggg\", \"a\" * 10)\n",
+    "d = Primer(\"gggg\" + (\"a\" * 10))\n",
+    "e = Primer(\"gggg\" + (\"a\" * 10), template=\"ccccaaaacccc\")\n",
+    "f = Primer(binding=\"a\" * 10, overhang=\"gggg\")\n",
+    "g = Primer(\"gggg\", (\"a\" * 10), template=\"ccccaaaacccc\")  # error\n",
+    "h = Primer(primer3=primer3testresult)\n",
+    "h2 = Primer(template=\"ggggaaaagggg\", primer3=primer3testresult)  # error\n",
+    "print(a, b, c, d, e, f, h, h2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = primers.Primer(\"gggg\" + (\"a\" * 10), template=\"cccc\" + (\"a\" * 10) + \"tttt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.tm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.mfe_monomer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primers.Primer(\"gggg\" + (\"a\" * 10), binding_length=10)"
    ]
   },
   {
