[shenker/cloning,cloning] PrimerPair seems done.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210827 FP parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210827 FP parts.ipynb
@@ -558,13 +558,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = primers.PrimerPair(\"aaaagggg\", \"ccccaaaa\")\n",
-    "b = primers.PrimerPair(\"aaaagggg\", \"ccccaaaa\", template=\"gggg\")\n",
-    "c = primers.PrimerPair(\n",
-    "    Primer(\"gggg\" + (\"a\" * 10), binding_length=10),\n",
-    "    Primer(\"gggg\" + (\"a\" * 10), binding_length=10),\n",
-    ")\n",
+    "# a = primers.PrimerPair(\"aaaagggg\", \"ccccaaaa\")\n",
+    "# b = primers.PrimerPair(\"aaaagggg\", \"ccccaaaa\", template=\"gggg\")\n",
+    "# c = primers.PrimerPair(Primer(\"gggg\"+(\"a\"*10), binding_length=10), Primer(\"gggg\"+(\"a\"*10), binding_length=10))\n",
     "d = primers.PrimerPair(primer3=primer3pairtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d"
    ]
   },
   {
@@ -583,6 +589,52 @@
     "h = Primer(primer3=primer3testresult)\n",
     "h2 = Primer(template=\"ggggaaaagggg\", primer3=primer3testresult)  # error\n",
     "print(a, b, c, d, e, f, h, h2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primers.PrimerPair(primer3=primer3pairtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = primers.Primer(primer3=primer3test)\n",
+    "h2 = primers.Primer(template=\"ggggaaaagggg\", primer3=primer3test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h.mfe_homodimer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h.mfe_monomer"
    ]
   },
   {
