[shenker/cloning,cloning] Renamed count_contiguous_matching to longest_justified_matching, added longest_contiguous_matching (which allows non-matching strings on either end).

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210830 FP parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210830 FP parts.ipynb
@@ -451,6 +451,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flanks = workflow.concatenate_flanks(gg_overhangs, storage_flanks)\n",
+    "primers.primer3_amplicon(inserts[\"pEB1-SCFP3A\"], flanks, return_many=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: make find_primer_binding_site more general,\n",
+    "# allow specifying score func so can find amplicons with overhangs on both sides?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -459,42 +479,9 @@
     "# USE CASES:\n",
     "# 1) take desired product, template seq, find overhangs\n",
     "# 2) take amplicon, optional overhangs\n",
-    "def primer3_amplicon_primers(\n",
-    "    template, flanks, tm=(55, 65, 72), return_explain=False, return_many=False\n",
-    "):\n",
-    "    template_seq = str(sequence.get_seq(template)).lower()\n",
-    "    full_flanks = workflow.concatenate_flanks(*flanks)\n",
-    "    trimmed_flanks = workflow.smoosh_and_trim_flanks(template_seq, full_flanks)\n",
-    "    design = primer3plus.Design()\n",
-    "    design.settings.template(template_seq)\n",
-    "    design.settings.as_cloning_task()\n",
-    "    design.settings.use_overhangs()\n",
-    "    design.settings.left_overhang(trimmed_flanks[0])\n",
-    "    design.settings.right_overhang(trimmed_flanks[1])\n",
-    "    if len(tm) != 3:\n",
-    "        raise ValueError(\"expecting (min, optimal, max) tm\")\n",
-    "        design.params[\"PRIMER_OPT_TM\"] = tm[0]\n",
-    "        design.params[\"PRIMER_MIN_TM\"] = tm[1]\n",
-    "        design.params[\"PRIMER_MAX_TM\"] = tm[2]\n",
-    "    design.settings.product_size([27, 10000], opt=0)\n",
-    "    if return_many is False:\n",
-    "        num_return = 1\n",
-    "    else:\n",
-    "        num_return = return_many\n",
-    "    design.settings.primer_num_return(num_return)\n",
-    "    # print(design.params)\n",
-    "    results, explain = design.run()\n",
-    "    if not return_many:\n",
-    "        if len(results) == 0:\n",
-    "            raise ValueError(\"did not design primers\")\n",
-    "        elif len(results) > 1:\n",
-    "            raise NotImplementError\n",
-    "        # return primers.PrimerPair(primer3=results[0])\n",
-    "        return results\n",
-    "    else:\n",
-    "        return results\n",
-    "        # return [primers.PrimerPair(primer3=r) for r in results.values()]\n",
-    "    return results, explain\n",
+    "\n",
+    "# TODO:\n",
+    "# tm/ta settings for Q5/phusion\n",
     "\n",
     "\n",
     "primer3_amplicon_primers(\n",
@@ -503,44 +490,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "primer3pairtest = {\n",
-    "    \"PAIR\": {\n",
-    "        \"PENALTY\": 17.00987790954747,\n",
-    "        \"COMPL_ANY_TH\": 8.920937018501036,\n",
-    "        \"COMPL_END_TH\": 0.3357452745337355,\n",
-    "        \"PRODUCT_SIZE\": 717,\n",
-    "    },\n",
-    "    \"LEFT\": {\n",
-    "        \"PENALTY\": 8.214364424255905,\n",
-    "        \"SEQUENCE\": \"atgagtaaaggagaagaacttttcact\",\n",
-    "        \"location\": (0, 27),\n",
-    "        \"TM\": 58.785635575744095,\n",
-    "        \"GC_PERCENT\": 33.333333333333336,\n",
-    "        \"SELF_ANY_TH\": 7.255354561467641,\n",
-    "        \"SELF_END_TH\": 0.0,\n",
-    "        \"HAIRPIN_TH\": 37.94059695097741,\n",
-    "        \"END_STABILITY\": 3.41,\n",
-    "        \"OVERHANG\": \"gcttcacgtctcggtctcaa\",\n",
-    "    },\n",
-    "    \"RIGHT\": {\n",
-    "        \"PENALTY\": 8.795513485291565,\n",
-    "        \"SEQUENCE\": \"ttatttgtatagttcatccatgccatg\",\n",
-    "        \"location\": (716, 27),\n",
-    "        \"TM\": 58.204486514708435,\n",
-    "        \"GC_PERCENT\": 33.333333333333336,\n",
-    "        \"SELF_ANY_TH\": 0.0,\n",
-    "        \"SELF_END_TH\": 0.0,\n",
-    "        \"HAIRPIN_TH\": 0.0,\n",
-    "        \"END_STABILITY\": 3.66,\n",
-    "        \"OVERHANG\": \"ggttgagaccggagacgtgctaa\",\n",
-    "    },\n",
-    "}\n",
-    "primer3test = primer3pairtest[\"LEFT\"]"
+    "# Sequence matching test"
    ]
   },
   {
@@ -549,137 +502,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1 = primers.Primer(primer3=primer3test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a = primers.PrimerPair(\"aaaagggg\", \"ccccaaaa\")\n",
-    "# b = primers.PrimerPair(\"aaaagggg\", \"ccccaaaa\", template=\"gggg\")\n",
-    "# c = primers.PrimerPair(Primer(\"gggg\"+(\"a\"*10), binding_length=10), Primer(\"gggg\"+(\"a\"*10), binding_length=10))\n",
-    "d = primers.PrimerPair(primer3=primer3pairtest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = Primer(\"gggg\" + (\"a\" * 10), binding_length=10)\n",
-    "b = Primer(\"gggg\" + (\"a\" * 10), overhang_length=4)\n",
-    "c = Primer(\"gggg\", \"a\" * 10)\n",
-    "d = Primer(\"gggg\" + (\"a\" * 10))\n",
-    "e = Primer(\"gggg\" + (\"a\" * 10), template=\"ccccaaaacccc\")\n",
-    "f = Primer(binding=\"a\" * 10, overhang=\"gggg\")\n",
-    "g = Primer(\"gggg\", (\"a\" * 10), template=\"ccccaaaacccc\")  # error\n",
-    "h = Primer(primer3=primer3testresult)\n",
-    "h2 = Primer(template=\"ggggaaaagggg\", primer3=primer3testresult)  # error\n",
-    "print(a, b, c, d, e, f, h, h2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "primers.PrimerPair(primer3=primer3pairtest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h = primers.Primer(primer3=primer3test)\n",
-    "h2 = primers.Primer(template=\"ggggaaaagggg\", primer3=primer3test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h.mfe_homodimer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h.mfe_monomer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = primers.Primer(\"gggg\" + (\"a\" * 10), template=\"cccc\" + (\"a\" * 10) + \"tttt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.tm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p.mfe_monomer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "primers.Primer(\"gggg\" + (\"a\" * 10), binding_length=10)"
+    "a = \"zzaaaaaxxx\"\n",
+    "b = \"12aaayyxx\"\n",
+    "sequence.longest_contiguous_matching(a, b)"
    ]
   },
   {
