[cloning,shenker/cloning] Fixed bug in longest_contiguous_matching, implemented extract_matching_subsequence to find flanks and the longest amplicon that can be used to PCR a desired product sequence from a given template.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210831 FP parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210831 FP parts.ipynb
@@ -512,7 +512,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "def randdna(n):\n",
+    "    return \"\".join(random.choices(\"atcg\", k=n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = sequence.DsSeqRecord(\n",
+    "    Seq(randdna(30) + \"aaaaggggttttgggg\" + randdna(30)), circular=True\n",
+    ")\n",
+    "b = sequence.DsSeqRecord(Seq(\"aaaaggggttttgggg\"))\n",
+    "c = sequence.DsSeqRecord(Seq(\"aaaaggggttttgggc\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.enumerate_matches(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[29:45]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b[0:16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.enumerate_primer_binding_sites(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.enumerate_primer_binding_sites(a, c, require_3prime_clamp=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = sequence.DsSeqRecord(\n",
+    "    Seq(randdna(1) + \"atgcgcgggaaaatgcgcacaacattagcgacctagc\" + randdna(1)),\n",
+    "    circular=True,\n",
+    ")\n",
+    "f = sequence.DsSeqRecord(Seq(\"atgcgcgggaaaatgcgcacaacattagcgacctagc\"))\n",
+    "g = sequence.DsSeqRecord(Seq(\"NNNNatgcgcgggaaaatgcgcacaacattagcgacctagcMMMM\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence.extract_matching_subsequence(e, g, min_score=20)"
+   ]
   }
  ],
  "metadata": {
